tests/baselines/reference/generatorES6_5.errors.txt
tests/cases/compiler/generatorES6_5.ts(1,9): error TS9001: Generators are not currently supported.
tests/cases/compiler/generatorES6_5.ts(2,5): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/compiler/generatorES6_5.ts (2 errors) ====
    function* foo() {
            ~
!!! error TS9001: Generators are not currently supported.
        yield a ? b : c;
        ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
    }